--- a/css/right-side-nav.css
+++ b/css/right-side-nav.css
@@ -13,7 +13,7 @@
   position: fixed;
   right: -100vw;
   top: 0;
-  width: 426px;
+  width: 550px;
   max-width: 100vw;
   height: 100vh;
   z-index: 1060;
@@ -28,9 +28,12 @@
     right: 0; }
   @media (max-width: 1679px) {
     .right-side-nav {
-      width: 390px; } }
+      width: 450px; } }
+  @media (max-width: 479px) {
+    .right-side-nav {
+      width: 100%; } }
   .right-side-nav .top-sec {
-    padding: 20px 25px;
+    padding: 20px;
     min-height: 80px;
     flex-shrink: 0;
     border-bottom: 1px solid #e3e4f3;
@@ -61,13 +64,83 @@
     .right-side-nav .top-sec .right-block .right-settings-btn {
       background-color: transparent;
       border: none; }
+    .right-side-nav .top-sec .right-block .right-settings-dropdown .settings-dropdown {
+      background-color: transparent;
+      border: none; }
+      .right-side-nav .top-sec .right-block .right-settings-dropdown .settings-dropdown::after {
+        display: none; }
+    .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu {
+      padding-top: 0;
+      box-shadow: 0px 4px 30px 0px #0000004D;
+      border: 1px solid #272727;
+      background: #1C1C20;
+      border-radius: 10px;
+      width: 330px;
+      max-width: 95vw; }
+      .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu::after {
+        content: '';
+        width: 12px;
+        height: 12px;
+        background-color: #1C1C20;
+        border-radius: 2px;
+        border-top: 1px solid #272727;
+        border-left: 1px solid #272727;
+        position: absolute;
+        top: -5px;
+        right: 20px;
+        transform: rotate(45deg); }
+      .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .dropdown-title {
+        font-size: 14px;
+        font-weight: 500;
+        border-bottom: 1px solid #27272D;
+        padding: 15px 20px;
+        color: #fff; }
+      .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover {
+        padding: 15px 20px; }
+        .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-title {
+          margin-bottom: 15px;
+          font-size: 12px;
+          color: #fff; }
+        .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-btn-cover {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 15px; }
+          .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-btn-cover .slp-btn {
+            padding: 8px 30px;
+            background-color: #25252C;
+            border-radius: 50px;
+            color: #fff;
+            transition: .3s;
+            font-size: 12px; }
+            .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-btn-cover .slp-btn:hover {
+              opacity: .8; }
+            .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-btn-cover .slp-btn.active {
+              background-color: #2966FF; }
+              .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-btn-cover .slp-btn.active:hover {
+                opacity: 1; }
+        .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-inp-block .input-group {
+          border: 1px solid #2E2E38;
+          border-radius: 50px;
+          height: 34px; }
+          .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-inp-block .input-group .form-control {
+            background-color: transparent;
+            border: none;
+            color: #fff;
+            font-size: 12px;
+            padding-left: 15px; }
+          .right-side-nav .top-sec .right-block .right-settings-dropdown .dropdown-menu .slippage-cal-cover .slp-inp-block .input-group .input-group-text {
+            padding-right: 15px;
+            background-color: transparent;
+            color: #fff;
+            font-size: 12px;
+            border: none; }
   .right-side-nav .nav-body {
     flex-grow: 1;
     overflow-y: auto;
     padding: 25px; }
-    @media (max-width: 400px) {
+    @media (max-width: 479px) {
       .right-side-nav .nav-body {
-        padding: 25px 18px; } }
+        padding: 25px 15px; } }
     .right-side-nav .nav-body.custom-scroll::-webkit-scrollbar {
       width: 8px;
       border-radius: 5px; }
@@ -147,7 +220,7 @@
           .right-side-nav .nav-body .liq-card .range-data-wrapper {
             padding-top: 14px; } }
         .right-side-nav .nav-body .liq-card .range-data-wrapper .amnt-left {
-          font-size: 14px;
+          font-size: 13px;
           color: #697081; }
         .right-side-nav .nav-body .liq-card .range-data-wrapper .rng-block {
           margin-left: auto;
@@ -196,6 +269,9 @@
       background-color: #141417;
       border-radius: 18px;
       padding: 18px 22px; }
+      @media (max-width: 400px) {
+        .right-side-nav .nav-body .currency-reserve-card {
+          padding: 18px 15px; } }
       .right-side-nav .nav-body .currency-reserve-card .reserves-title {
         margin-bottom: 20px;
         color: #fff;
@@ -236,10 +312,10 @@
               font-size: 13px; } }
         .right-side-nav .nav-body .currency-reserve-card .props-dif-wrapper .props-sm-block .pr-data p {
           margin: 0;
-          font-size: 14px; }
+          font-size: 12px; }
           @media (max-width: 1679px) {
             .right-side-nav .nav-body .currency-reserve-card .props-dif-wrapper .props-sm-block .pr-data p {
-              font-size: 13px; } }
+              font-size: 11px; } }
       .right-side-nav .nav-body .currency-reserve-card .apr-block {
         background-color: #1C1C1F;
         border-radius: 11px;
@@ -250,6 +326,65 @@
         .right-side-nav .nav-body .currency-reserve-card .apr-block .apr-data {
           font-size: 24px;
           font-weight: 500; }
+    .right-side-nav .nav-body .remove-liquidity-card .lp-title-wrapper {
+      margin-bottom: 15px;
+      justify-content: space-between;
+      align-items: center; }
+      .right-side-nav .nav-body .remove-liquidity-card .lp-title-wrapper .lp-title {
+        font-size: 14px;
+        font-weight: 500;
+        color: #fff; }
+      .right-side-nav .nav-body .remove-liquidity-card .lp-title-wrapper .lp-val {
+        color: #697081;
+        font-size: 14px;
+        font-weight: 500; }
+        @media (max-width: 1679px) {
+          .right-side-nav .nav-body .remove-liquidity-card .lp-title-wrapper .lp-val {
+            font-size: 13px; } }
+    .right-side-nav .nav-body .remove-liquidity-card .val-range-cover {
+      margin-bottom: 22px; }
+      .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .rng-val {
+        font-size: 24px;
+        font-weight: 600;
+        color: #fff;
+        margin-bottom: 10px; }
+        @media (max-width: 1679px) {
+          .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .rng-val {
+            font-size: 22px; } }
+      .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .rng-slider {
+        margin-bottom: 12px; }
+      .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+        column-gap: 8px; }
+        @media (max-width: 400px) {
+          .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover {
+            column-gap: 5px; } }
+        .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover .rng-btn {
+          flex-grow: 1;
+          padding: 8px 15px;
+          background-color: #25252C;
+          border-radius: 50px;
+          color: #fff;
+          transition: .3s;
+          font-size: 12px; }
+          @media (max-width: 1679px) {
+            .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover .rng-btn {
+              padding: 8px 20px; } }
+          .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover .rng-btn:hover {
+            opacity: .8; }
+          .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover .rng-btn.active {
+            background-color: #2966FF; }
+            .right-side-nav .nav-body .remove-liquidity-card .val-range-cover .btn-cover .rng-btn.active:hover {
+              opacity: 1; }
+    .right-side-nav .nav-body .remove-liquidity-card .apr-block {
+      padding: 15px 20px; }
+      .right-side-nav .nav-body .remove-liquidity-card .apr-block .apr-data {
+        font-size: 12px;
+        font-weight: 500; }
+        .right-side-nav .nav-body .remove-liquidity-card .apr-block .apr-data:first-child {
+          margin-bottom: 3px; }
     .right-side-nav .nav-body .token-search-cover .search-group {
       margin-bottom: 35px;
       background-color: #141417;
