--- a/scss/right-side-nav.scss
+++ b/scss/right-side-nav.scss
@@ -3,7 +3,7 @@
     position: fixed;
     right: -100vw;
     top: 0;
-    width: 426px;
+    width: 550px;
     max-width: 100vw;
     height: 100vh;
     z-index: 1060;
@@ -18,10 +18,13 @@
         right: 0;
     }
     @media ($sm-1679) {
-        width: 390px;
+        width: 450px;
+    }
+    @media ($sm-479) {
+        width: 100%;
     }
     .top-sec{
-        padding: 20px 25px;
+        padding: 20px;
         min-height: 80px;
         flex-shrink: 0;
         border-bottom: 1px solid $border-grey;
@@ -59,14 +62,103 @@
                 background-color: transparent;
                 border: none;
             }
+            .right-settings-dropdown{
+                .settings-dropdown{
+                    background-color: transparent;
+                    border: none;
+                    &::after{
+                        display: none;
+                    }
+                }
+                .dropdown-menu{
+                    padding-top: 0;
+                    box-shadow: 0px 4px 30px 0px #0000004D;
+                    border: 1px solid #272727;
+                    background: #1C1C20;
+                    border-radius: 10px;
+                    width: 330px;
+                    max-width: 95vw;
+                    &::after{
+                        content: '';
+                        width: 12px;
+                        height: 12px;
+                        background-color: #1C1C20;
+                        border-radius: 2px;
+                        border-top: 1px solid #272727;
+                        border-left: 1px solid #272727;
+                        position: absolute;
+                        top: -5px;
+                        right: 20px;
+                        transform: rotate(45deg);
+                    }
+                    .dropdown-title{
+                        font-size: 14px;
+                        font-weight: 500;
+                        border-bottom: 1px solid #27272D;
+                        padding: 15px 20px;
+                        color: #fff;
+                    }
+                    .slippage-cal-cover{
+                        padding: 15px 20px;
+                        .slp-title{
+                            margin-bottom: 15px;
+                            font-size: 12px;
+                            color: #fff;
+                        }
+                        .slp-btn-cover{
+                            display: flex;
+                            justify-content: space-between;
+                            margin-bottom: 15px;
+                            .slp-btn{
+                                padding: 8px 30px;
+                                background-color: #25252C;
+                                border-radius: 50px;
+                                color: #fff;
+                                transition: .3s;
+                                font-size: 12px;
+                                &:hover{
+                                    opacity: .8;
+                                }
+                                &.active{
+                                    background-color: $primary-blue;
+                                    &:hover{
+                                        opacity: 1;
+                                    }
+                                }
+                            }
+                        }
+                        .slp-inp-block{
+                            .input-group{
+                                border: 1px solid #2E2E38;
+                                border-radius: 50px;
+                                height: 34px;
+                                .form-control{
+                                    background-color: transparent;
+                                    border: none;
+                                    color: #fff;
+                                    font-size: 12px;
+                                    padding-left: 15px;
+                                }
+                                .input-group-text{
+                                    padding-right: 15px;
+                                    background-color: transparent;
+                                    color: #fff;
+                                    font-size: 12px;
+                                    border: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
     .nav-body{
         flex-grow: 1;
         overflow-y: auto;
         padding: 25px;
-        @media (max-width: 400px) {
-            padding: 25px 18px;
+        @media ($sm-479) {
+            padding: 25px 15px;
         }
         &.custom-scroll {
             &::-webkit-scrollbar {
@@ -169,7 +261,7 @@
                     padding-top: 14px;
                 }
                 .amnt-left{
-                    font-size: 14px;
+                    font-size: 13px;
                     color: #697081;
                 }
                 .rng-block{
@@ -234,6 +326,9 @@
             background-color: #141417;
             border-radius: 18px;
             padding: 18px 22px;
+            @media (max-width: 400px) {
+                padding: 18px 15px;
+            }
             .reserves-title{
                 margin-bottom: 20px;
                 color: #fff;
@@ -281,9 +376,9 @@
                         }
                         p{
                             margin: 0;
-                            font-size: 14px;
+                            font-size: 12px;
                             @media ($sm-1679) {
-                                font-size: 13px;
+                                font-size: 11px;
                             }
                         }
                     }
@@ -301,6 +396,85 @@
                 .apr-data{
                     font-size: 24px;
                     font-weight: 500;
+                }
+            }
+        }
+
+        .remove-liquidity-card{
+            .lp-title-wrapper{
+                margin-bottom: 15px;
+                justify-content: space-between;
+                align-items: center;
+                .lp-title{
+                    font-size: 14px;
+                    font-weight: 500;
+                    color: #fff;
+                }
+                .lp-val{
+                    color: #697081;
+                    font-size: 14px;
+                    font-weight: 500;
+                    @media ($sm-1679) {
+                        font-size: 13px;
+                    }
+                }
+            }
+            .val-range-cover{
+                margin-bottom: 22px;
+                .rng-val{
+                    font-size: 24px;
+                    font-weight: 600;
+                    color: #fff;
+                    margin-bottom: 10px;
+                    @media ($sm-1679) {
+                        font-size: 22px;
+                    }
+                }
+                .rng-slider{
+                    margin-bottom: 12px;
+                }
+                .btn-cover{
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 15px;
+                    column-gap: 8px;
+                    @media (max-width: 400px) {
+                        column-gap: 5px;
+                    }
+                    .rng-btn{
+                        flex-grow: 1;
+                        padding: 8px 15px;
+                        background-color: #25252C;
+                        border-radius: 50px;
+                        color: #fff;
+                        transition: .3s;
+                        font-size: 12px;
+                        @media ($sm-1679) {
+                            padding: 8px 20px;
+                        }
+                        &:hover{
+                            opacity: .8;
+                        }
+                        &.active{
+                            background-color: $primary-blue;
+                            &:hover{
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }
+            .apr-block{
+                padding: 15px 20px;
+                .apr-label{
+
+                }
+                .apr-data{
+                    font-size: 12px;
+                    font-weight: 500;
+                    &:first-child{
+                        margin-bottom: 3px;
+                    }
                 }
             }
         }
