--- a/scss/liquidity-pool.scss
+++ b/scss/liquidity-pool.scss
@@ -425,6 +425,9 @@
                     padding: 12px 10px;
                     font-size: 12px;
                     font-weight: 600;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     img{
                         margin-right: 6px;
                         max-height: 12px;
